[gd_scene load_steps=4 format=2]

[ext_resource path="res://data/npcs/devaun.gd" type="Script" id=1]
[ext_resource path="res://data/meshes/Oleg_animated.escn" type="PackedScene" id=3]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.389826, 1.57292, 0.533423 )

[node name="npc" type="StaticBody"]
script = ExtResource( 1 )

[node name="Oleg_animated" parent="." instance=ExtResource( 3 )]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0, 0 )

[node name="npc_trigger" type="Area" parent="."]
transform = Transform( 1.01, 0, 0, 0, 1.01, 0, 0, 0, 1.01, 0, 0, 0 )
priority = 5.0
angular_damp = 1.0

[node name="CollisionShape" type="CollisionShape" parent="npc_trigger"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.07479, 0 )
shape = SubResource( 2 )

[connection signal="input_event" from="npc_trigger" to="." method="_on_npc_trigger_input_event"]
[connection signal="mouse_entered" from="npc_trigger" to="." method="_on_npc_trigger_mouse_enter"]
[connection signal="mouse_exited" from="npc_trigger" to="." method="_on_npc_trigger_mouse_exit"]
